add some changes for env varables
